<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">



        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="5dp"
            card_view:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/country"
                    card_view:layout_constraintBottom_toTopOf="@id/tv_capital"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.495"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@id/tv_country"
                    card_view:layout_constraintVertical_bias="0.0"
                    card_view:layout_constraintVertical_chainStyle="packed"
                    card_view:shapeAppearanceOverlay="@style/RoundedSquare"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/head_of_state"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="12dp"
                    tools:layout_editor_absoluteY="12dp" />

                <TextView
                    android:id="@+id/tv_capital"
                    android:textSize="29sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/capital"
                    android:textColor="#fcd703"
                    card_view:layout_constraintBottom_toTopOf="@+id/tv_item_description"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="@id/tv_currency"
                    card_view:layout_constraintTop_toBottomOf="@+id/img_item_photo"
                    card_view:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/img_item_photo"
                    android:maxLines="2"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/tv_capital"
                    tools:text="@string/language" />

                <TextView
                    android:id="@+id/tv_currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    card_view:layout_constraintBottom_toTopOf="@id/tv_item_description"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0"
                    card_view:layout_constraintStart_toStartOf="@+id/tv_language"
                    card_view:layout_constraintTop_toBottomOf="@+id/tv_language"
                    card_view:layout_constraintVertical_bias="0.0"
                    card_view:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_item_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textSize="16sp"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0"
                    card_view:layout_constraintStart_toStartOf="@+id/tv_language"
                    card_view:layout_constraintTop_toBottomOf="@+id/tv_currency"
                    card_view:layout_constraintVertical_bias="0.0"
                    card_view:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/currency" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!-- Isi konten di sini -->

    </LinearLayout>
</ScrollView>